--- a/Watter0-0.cydsn/ImplementedSource/latex/_power_mode_8h.tex
+++ b/Watter0-0.cydsn/ImplementedSource/latex/_power_mode_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{Power\+Mode.\+h File Reference}
 \label{_power_mode_8h}\index{PowerMode.h@{PowerMode.h}}
+
+
+This header includes the functions for adding a Free\+R\+T\+OS task which can make the system go into deepsleep.  
+
+
 {\ttfamily \#include \char`\"{}project.\+h\char`\"{}}\newline
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
@@ -11,18 +16,17 @@ cy\+\_\+en\+\_\+syspm\+\_\+status\+\_\+t \textbf{ Deep\+Sleep\+Callback} (cy\+\_
 
 
 \doxysubsection{Detailed Description}
+This header includes the functions for adding a Free\+R\+T\+OS task which can make the system go into deepsleep. 
+
 \begin{DoxyAuthor}{Author}
-your name ({\texttt{ you@domain.\+com}}) 
+Nicklas Lind 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+1 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-2020-\/12-\/13
+2020-\/12-\/13 
 \end{DoxyDate}
-\begin{DoxyCopyright}{Copyright}
-Copyright (c) 2020 
-\end{DoxyCopyright}
 
 
 \doxysubsection{Function Documentation}
