--- a/Watter0-0.cydsn/ImplementedSource/latex/files.tex
+++ b/Watter0-0.cydsn/ImplementedSource/latex/files.tex
@@ -1,12 +1,10 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\textbf{ A\+D\+X\+L345\+Sensor.\+h} }{\pageref{_a_d_x_l345_sensor_8h}}{}
-\item\contentsline{section}{\textbf{ Battery.\+h} }{\pageref{_battery_8h}}{}
-\item\contentsline{section}{\textbf{ ble\+Handler.\+c} \\*Module for all things bluetooth }{\pageref{ble_handler_8c}}{}
-\item\contentsline{section}{\textbf{ ble\+Handler.\+h} }{\pageref{ble_handler_8h}}{}
-\item\contentsline{section}{\textbf{ my\+\_\+\+I2\+C.\+h} }{\pageref{my___i2_c_8h}}{}
-\item\contentsline{section}{\textbf{ Power\+Mode.\+h} }{\pageref{_power_mode_8h}}{}
-\item\contentsline{section}{\textbf{ printer.\+h} }{\pageref{printer_8h}}{}
-\item\contentsline{section}{\textbf{ sampler.\+h} }{\pageref{sampler_8h}}{}
-\item\contentsline{section}{\textbf{ wat\+Utility.\+h} }{\pageref{wat_utility_8h}}{}
+\item\contentsline{section}{\textbf{ A\+D\+X\+L345\+Sensor.\+h} \\*This header includes necessary structs and functions to communicate with an A\+D\+X\+L345 accelerometer over I2C }{\pageref{_a_d_x_l345_sensor_8h}}{}
+\item\contentsline{section}{\textbf{ Battery.\+h} \\*This header includes a battery struct where information about the battery voltage and percentage charge can be stored }{\pageref{_battery_8h}}{}
+\item\contentsline{section}{\textbf{ ble\+Handler.\+h} \\*This header is included to add all B\+LE functionallity }{\pageref{ble_handler_8h}}{}
+\item\contentsline{section}{\textbf{ my\+\_\+\+I2\+C.\+h} \\*This Header includes helper functions for implementing I2C parts of the project. See \doxyref{A\+D\+X\+L345\+Sensor.\+h}{p.}{_a_d_x_l345_sensor_8h} }{\pageref{my___i2_c_8h}}{}
+\item\contentsline{section}{\textbf{ Power\+Mode.\+h} \\*This header includes the functions for adding a Free\+R\+T\+OS task which can make the system go into deepsleep }{\pageref{_power_mode_8h}}{}
+\item\contentsline{section}{\textbf{ printer.\+h} \\*This header includes a L\+OG macro for printing to stdout and a Free\+R\+T\+OS task which periodically writes information about the system to a U\+A\+RT }{\pageref{printer_8h}}{}
+\item\contentsline{section}{\textbf{ wat\+Utility.\+h} \\*This header includes small helper functions for different parts of the system }{\pageref{wat_utility_8h}}{}
 \end{DoxyCompactList}
