--- a/Watter0-0.cydsn/ImplementedSource/latex/sampler_8h.tex
+++ b/Watter0-0.cydsn/ImplementedSource/latex/sampler_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{sampler.\+h File Reference}
 \label{sampler_8h}\index{sampler.h@{sampler.h}}
+
+
+This header was used to simulate samples during early development. The header is mostly obsolete now.  
+
+
 {\ttfamily \#include \char`\"{}project.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}semphr.\+h\char`\"{}}\newline
 \doxysubsection*{Data Structures}
@@ -30,18 +35,17 @@ void {\bfseries sampler\+\_\+init} ()
 
 
 \doxysubsection{Detailed Description}
+This header was used to simulate samples during early development. The header is mostly obsolete now. 
+
 \begin{DoxyAuthor}{Author}
-your name ({\texttt{ you@domain.\+com}}) 
+Nicklas Lind 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+1 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-2020-\/12-\/13
+2020-\/12-\/13 
 \end{DoxyDate}
-\begin{DoxyCopyright}{Copyright}
-Copyright (c) 2020 
-\end{DoxyCopyright}
 
 
 \doxysubsection{Function Documentation}
