--- a/Watter0-0.cydsn/ImplementedSource/latex/wat_utility_8h.tex
+++ b/Watter0-0.cydsn/ImplementedSource/latex/wat_utility_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{wat\+Utility.\+h File Reference}
 \label{wat_utility_8h}\index{watUtility.h@{watUtility.h}}
+
+
+This header includes small helper functions for different parts of the system.  
+
+
 {\ttfamily \#include \char`\"{}project.\+h\char`\"{}}\newline
 \doxysubsection*{Macros}
 \begin{DoxyCompactItemize}
@@ -26,18 +31,17 @@ void \textbf{ handle\+Error} (uint8 x)
 
 
 \doxysubsection{Detailed Description}
+This header includes small helper functions for different parts of the system. 
+
 \begin{DoxyAuthor}{Author}
-your name ({\texttt{ you@domain.\+com}}) 
+Nicklas Lind 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+1 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-2020-\/12-\/13
+2020-\/12-\/13 
 \end{DoxyDate}
-\begin{DoxyCopyright}{Copyright}
-Copyright (c) 2020 
-\end{DoxyCopyright}
 
 
 \doxysubsection{Function Documentation}
