--- a/Watter0-0.cydsn/ImplementedSource/latex/_battery_8h.tex
+++ b/Watter0-0.cydsn/ImplementedSource/latex/_battery_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{Battery.\+h File Reference}
 \label{_battery_8h}\index{Battery.h@{Battery.h}}
+
+
+This header includes a battery struct where information about the battery voltage and percentage charge can be stored.  
+
+
 {\ttfamily \#include \char`\"{}project.\+h\char`\"{}}\newline
 \doxysubsection*{Data Structures}
 \begin{DoxyCompactItemize}
@@ -14,18 +19,17 @@ void \textbf{ Battery\+Init} (\textbf{ Battery\+\_\+t} $\ast$battery)
 
 
 \doxysubsection{Detailed Description}
+This header includes a battery struct where information about the battery voltage and percentage charge can be stored. 
+
 \begin{DoxyAuthor}{Author}
-your name ({\texttt{ you@domain.\+com}}) 
+Nicklas Lind 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+1 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-2020-\/12-\/13
+2020-\/12-\/13 
 \end{DoxyDate}
-\begin{DoxyCopyright}{Copyright}
-Copyright (c) 2020 
-\end{DoxyCopyright}
 
 
 \doxysubsection{Function Documentation}
