--- a/Watter0-0.cydsn/ImplementedSource/latex/my___i2_c_8h.tex
+++ b/Watter0-0.cydsn/ImplementedSource/latex/my___i2_c_8h.tex
@@ -1,5 +1,10 @@
 \doxysection{my\+\_\+\+I2\+C.\+h File Reference}
 \label{my___i2_c_8h}\index{my\_I2C.h@{my\_I2C.h}}
+
+
+This Header includes helper functions for implementing I2C parts of the project. See \doxyref{A\+D\+X\+L345\+Sensor.\+h}{p.}{_a_d_x_l345_sensor_8h}.  
+
+
 {\ttfamily \#include \char`\"{}project.\+h\char`\"{}}\newline
 \doxysubsection*{Macros}
 \begin{DoxyCompactItemize}
@@ -28,6 +33,8 @@ cy\+\_\+en\+\_\+scb\+\_\+i2c\+\_\+status\+\_\+t \textbf{ status}
 
 
 \doxysubsection{Detailed Description}
+This Header includes helper functions for implementing I2C parts of the project. See \doxyref{A\+D\+X\+L345\+Sensor.\+h}{p.}{_a_d_x_l345_sensor_8h}. 
+
 \begin{DoxyAuthor}{Author}
 your name ({\texttt{ you@domain.\+com}}) 
 \end{DoxyAuthor}
@@ -35,11 +42,8 @@ your name ({\texttt{ you@domain.\+com}})
 0.\+1 
 \end{DoxyVersion}
 \begin{DoxyDate}{Date}
-2020-\/12-\/13
+2020-\/12-\/13 
 \end{DoxyDate}
-\begin{DoxyCopyright}{Copyright}
-Copyright (c) 2020 
-\end{DoxyCopyright}
 
 
 \doxysubsection{Function Documentation}
@@ -73,7 +77,7 @@ uint8 Data read from the specified register address
 
 Error handleling function. 
 
-This error handleling function prints out {\ttfamily errnum} along with a message that an error has occurred. This is done by using the L\+O\+G() function.
+This error handleling function prints out {\ttfamily errnum} along with a message that an error has occurred. This is done by using the \doxyref{L\+O\+G()}{p.}{printer_8h_a3577749fb48d57a158b8ac1a0b3ab57e} function.
 
 
 \begin{DoxyParams}{Parameters}
